# tablang

./: .gitignore  pyproject.toml
src/tablang/: __init__.py  lexer.py  repl.py  token.py
tests/: test_lexer.py
